[project]
name = "xbudget"
dynamic = ["version"]
authors = [
    {name="Henri F. Drake", email="hfdrake@uci.edu"},
]
description = "Helper functions and meta-data conventions for wrangling finite-volume ocean model budgets"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "xarray",
    "xgcm @ git+https://github.com/xgcm/xgcm.git@7492277de22ed1e677a6a7523b61b20643a98a77",
]

[project.urls]
"Homepage" = "https://github.com/hdrake/xbudget"
"Bugs/Issues/Features" = "https://github.com/hdrake/xbudget/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
path = "xbudget/version.py"